Hope to fix horizontal scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -58,11 +58,14 @@ button:focus-visible {
   padding: 2em;
 }
 
+html, body, #app {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  overflow-x: hidden;
+  width: 100;
 }
 
 @media (prefers-color-scheme: light) {
